docs(swagger): end task
